deploy/canary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meshr-canary
  labels:
    app.kubernetes.io/part-of: meshr
    meshr.social/environment: canary
